# PomodoroTimer

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup.py
src/: main.py
src/timer/: timer.py
