[project]
name = "pomodoro-timer"
version = "0.1.0"
description = "A pomodoro timer that utilises the MacOS menubar"
authors = [
    {name = "lrzo01"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rumps (>=0.4.0,<0.5.0)",
    "pyobjc (>=11.1,<12.0)",
    "jaraco-text (>=4.0.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
py2app = "^0.28.8"

